--- a/test_email.html
+++ b/test_email.html
@@ -14,8 +14,6 @@
 
     table {
         width: 100%;
-        border-left: 2px solid #e6e6e6;
-        border-right: 2px solid #e6e6e6;
     }
 
     .table-content {
@@ -41,7 +39,7 @@
         width: 100%;
     }
     .cropped {
-        height: 300px;
+        max-height: 300px;
         overflow: hidden;
         border-bottom: 3px solid #b3c9b3;
     }
@@ -54,7 +52,7 @@
         font-size: 11px;
         color: #575757;
         line-height: 200%;
-        font-family: 'Arial', Sans-Serif;
+        font-family: 'Montserrat',sans-serif;
         text-decoration: none;
     }
 
@@ -73,7 +71,7 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 1.7;
-        font-family: 'Arial', Sans-Serif;
+        font-family: 'Montserrat',sans-serif;
     }
 
     h1 {
